# streambot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  radio_stations.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
app/: config.py  main.py  utils.py
